force-app/main/default/objects/Account/fields/auara_Categoria__c.field-meta.xml
<CustomField>
    <fullName>auara_Categoria__c</fullName>
    <formula>IF( auara_LiteralCategoria__c = &quot;GOLD&quot; , IMAGE(&quot;/resource/Medals/medal_gold.gif&quot;, &quot;GOLD&quot;,  24, 24),
IF ( auara_LiteralCategoria__c = &quot;SILVER&quot;, IMAGE(&quot;/resource/Medals/medal_silver.gif&quot;, &quot;SILVER&quot;, 24, 24),
IMAGE(&quot;/resource/Medals/medal_bronze.gif&quot;, &quot;BRONZE&quot;, 24, 24)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoría</label>
    <type>Text</type>
</CustomField>