force-app/main/default/objects/Account/fields/auara_CompetenciaAgua__c.field-meta.xml
<CustomField>
    <fullName>auara_CompetenciaAgua__c</fullName>
    <label>Competencia Agua</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguaencaja</fullName>
            </value>
            <value>
                <fullName>Aquabona</fullName>
            </value>
            <value>
                <fullName>Aquafina</fullName>
            </value>
            <value>
                <fullName>Aquarel</fullName>
            </value>
            <value>
                <fullName>Bezoya</fullName>
            </value>
            <value>
                <fullName>Cabreiroa</fullName>
            </value>
            <value>
                <fullName>Evian</fullName>
            </value>
            <value>
                <fullName>Fontvella</fullName>
            </value>
            <value>
                <fullName>Fuente liviana</fullName>
            </value>
            <value>
                <fullName>Lanjarón</fullName>
            </value>
            <value>
                <fullName>Solan de cabras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>