force-app/main/default/objects/Account/fields/auara_CompetenciaCerveza__c.field-meta.xml
<CustomField>
    <fullName>auara_CompetenciaCerveza__c</fullName>
    <label>Competencia Cerveza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ambar</fullName>
            </value>
            <value>
                <fullName>Cruzcampo</fullName>
            </value>
            <value>
                <fullName>Damm</fullName>
            </value>
            <value>
                <fullName>Estrella Galicia</fullName>
            </value>
            <value>
                <fullName>Heineken</fullName>
            </value>
            <value>
                <fullName>La Virgen</fullName>
            </value>
            <value>
                <fullName>Mahou</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>