force-app/main/default/objects/Account/fields/auara_DisqualifyReason__c.field-meta.xml
<CustomField>
    <fullName>auara_DisqualifyReason__c</fullName>
    <description>Disqualify reason</description>
    <label>Disqualify Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agua filtrada</fullName>
            </value>
            <value>
                <fullName>Exclusividad</fullName>
            </value>
            <value>
                <fullName>Formato</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Por Auara</fullName>
            </value>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Vidrio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>