force-app/main/default/objects/Account/fields/auara_Distribuidor__c.field-meta.xml
<CustomField>
    <fullName>auara_Distribuidor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribuidor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Distribuidor</value>
        </filterItems>
        <infoMessage>Seleccione un distribuidor para este clente</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clientes</relationshipLabel>
    <relationshipName>Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>