force-app/main/default/objects/Account/fields/auara_LiteralCategoria__c.field-meta.xml
<CustomField>
    <fullName>auara_LiteralCategoria__c</fullName>
    <formula>IF( auara_VolumenPotencial__c &gt; 100, &quot;GOLD&quot;,
    IF ( auara_VolumenPotencial__c &gt; 50, &quot;SILVER&quot;,
        &quot;BRONZE&quot;)
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Literal Categoria</label>
    <type>Text</type>
</CustomField>