force-app/main/default/objects/Account/fields/auara_NegociacionEspecial__c.field-meta.xml
<CustomField>
    <fullName>auara_NegociacionEspecial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Negociación Especial</label>
    <type>Checkbox</type>
</CustomField>