force-app/main/default/objects/Account/fields/auara_Status__c.field-meta.xml
<CustomField>
    <fullName>auara_Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>prospecting</fullName>
                <default>true</default>
                <label>prospecting</label>
            </value>
            <value>
                <fullName>engagement</fullName>
            </value>
            <value>
                <fullName>opportunity</fullName>
            </value>
            <value>
                <fullName>closed_won</fullName>
            </value>
            <value>
                <fullName>active</fullName>
            </value>
            <value>
                <fullName>disqualified</fullName>
            </value>
            <value>
                <fullName>standBy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>