force-app/main/default/objects/Account/fields/auara_Terraza__c.field-meta.xml
<CustomField>
    <fullName>auara_Terraza__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terraza</label>
    <type>Checkbox</type>
</CustomField>