force-app/main/default/objects/Account/fields/auara_VolumenPotencial__c.field-meta.xml
<CustomField>
    <fullName>auara_VolumenPotencial__c</fullName>
    <inlineHelpText>Litros a la semana</inlineHelpText>
    <label>Volumen Potencial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>