force-app/main/default/objects/Account/fields/aura_Vertical__c.field-meta.xml
<CustomField>
    <fullName>aura_Vertical__c</fullName>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>Colectividades</fullName>
            </value>
            <value>
                <fullName>Corporativo</fullName>
            </value>
            <value>
                <fullName>Corporativo Regional</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>HH</fullName>
            </value>
            <value>
                <fullName>HO</fullName>
            </value>
            <value>
                <fullName>Hostelería independiente</fullName>
            </value>
            <value>
                <fullName>Vending</fullName>
            </value>
            <value>
                <fullName>Vending regional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>