force-app/main/default/objects/Account/validationRules/Volumen_Potencial_mayor_que_cero.validationRule-meta.xml
<ValidationRule>
    <fullName>Volumen_Potencial_mayor_que_cero</fullName>
    <active>true</active>
    <errorConditionFormula>auara_VolumenPotencial__c &lt; 0</errorConditionFormula>
    <errorDisplayField>auara_VolumenPotencial__c</errorDisplayField>
    <errorMessage>El volumen potencial siempre debe de ser igual o mayor que cero</errorMessage>
</ValidationRule>